beautified wizard locale properties

--- a/production/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.controller.nl1.de/messages_de.properties
@@ -1,15 +1,13 @@
-
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-ControllerCreationWizardTitle="Neues "Controller" Diagramm"
-ControllerCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Controller" Diagramms"
-ControllerCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
-
-ControllerCreationWizard_DomainModelFilePageTitle="Erstellung eines "Controller" Domänen-Modells"
-ControllerCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
-ControllerCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
-ControllerCreationWizardCreationError="Probleme bei der Erstellung"
-ControllerCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
+ControllerCreationWizardTitle=Neues Controllerdiagramm
+ControllerCreationWizard_DiagramModelFilePageTitle=Erstellung eines Controllerdiagramms
+ControllerCreationWizard_DiagramModelFilePageDescription=Datei für das Controllerdiagramm wählen.
+ControllerCreationWizard_DomainModelFilePageTitle=Erstellung eines Controllermodells
+ControllerCreationWizard_DomainModelFilePageDescription=Datei für das Controllermodell wählen
+ControllerCreationWizardOpenEditorError=Fehler beim Öffnen des Diagramm-Editors
+ControllerCreationWizardCreationError=Probleme bei der Erstellung
+ControllerCreationWizardPageExtensionError=Der Dateiname sollte die Endung {0} haben.
 ControllerDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
 ControllerDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
 ControllerDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
