--- a/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -1,15 +1,13 @@
-
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-ModulestudioCreationWizardTitle="Neues "Anwendungs" Diagramm"
-ModulestudioCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Anwendungs" Diagramms"
-ModulestudioCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
-
-ModulestudioCreationWizard_DomainModelFilePageTitle="Erstellung eines "Anwendungs" Domänen-Modells"
-ModulestudioCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
-ModulestudioCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
-ModulestudioCreationWizardCreationError="Probleme bei der Erstellung"
-ModulestudioCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
+ModulestudioCreationWizardTitle=Neues Anwendungsdiagramm
+ModulestudioCreationWizard_DiagramModelFilePageTitle=Erstellung eines Anwendungsdiagramms
+ModulestudioCreationWizard_DiagramModelFilePageDescription=Datei für das Anwendungsdiagramm wählen.
+ModulestudioCreationWizard_DomainModelFilePageTitle=Erstellung eines Anwendungsmodells
+ModulestudioCreationWizard_DomainModelFilePageDescription=Datei für das Anwendungsmodell wählen
+ModulestudioCreationWizardOpenEditorError=Fehler beim Öffnen des Diagramm-Editors
+ModulestudioCreationWizardCreationError=Probleme bei der Erstellung
+ModulestudioCreationWizardPageExtensionError=Der Dateiname sollte die Endung {0} haben.
 ModulestudioDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
 ModulestudioDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
 ModulestudioDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
