--- a/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/messages_de.properties
@@ -1,15 +1,13 @@
-
 CreateShortcutAction_OpenModelTitle=Zu referenzierendes Modell wählen
 CreateShortcutAction_WizardTitle=Shortcut erstellen
-ModelCreationWizardTitle="Neues "Model" Diagramm"
-ModelCreationWizard_DiagramModelFilePageTitle="Erstellung eines "Model" Diagramms"
-ModelCreationWizard_DiagramModelFilePageDescription=Datei für das Diagramm-Modell wählen.
-
-ModelCreationWizard_DomainModelFilePageTitle="Erstellung eines "Model" Domänen-Modells"
-ModelCreationWizard_DomainModelFilePageDescription="Datei für das Domänen-Modell wählen"
-ModelCreationWizardOpenEditorError="Fehler beim Öffnen des Diagramm-Editors"
-ModelCreationWizardCreationError="Probleme bei der Erstellung"
-ModelCreationWizardPageExtensionError="Der Dateiname sollte die Endung {0} haben."
+ModelCreationWizardTitle=Neues Persistenzdiagramm
+ModelCreationWizard_DiagramModelFilePageTitle=Erstellung eines Persistenzdiagramms
+ModelCreationWizard_DiagramModelFilePageDescription=Datei für das Persistenzdiagramm wählen.
+ModelCreationWizard_DomainModelFilePageTitle=Erstellung eines Persistenzmodells
+ModelCreationWizard_DomainModelFilePageDescription=Datei für das Persistenzmodell wählen
+ModelCreationWizardOpenEditorError=Fehler beim Öffnen des Diagramm-Editors
+ModelCreationWizardCreationError=Probleme bei der Erstellung
+ModelCreationWizardPageExtensionError=Der Dateiname sollte die Endung {0} haben.
 ModelDiagramEditorUtil_OpenModelResourceErrorDialogTitle=Fehler
 ModelDiagramEditorUtil_OpenModelResourceErrorDialogMessage=Konnte Modell-Datei {0} nicht laden
 ModelDiagramEditorUtil_CreateDiagramProgressTask=Erstelle Diagramm- und Modell-Dateien
