apply checks for reserved database keywords also to indexes

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -166,6 +166,7 @@ MostDslJavaValidator.EntityIndexItemNeedsIndex=Der Index-Eintrag muss einem Inde
 MostDslJavaValidator.EntityIndexLengthMustNotBeTooLarge=Die Länge aller Index-Felder darf nicht höher sein als 333.
 MostDslJavaValidator.EntityIndexNameMustBeLonger=Der Name des Index muss eine Länge von mindestens zwei Zeichen haben.
 MostDslJavaValidator.EntityIndexNameMustBeUnique=Die Namen der Indexe müssen eindeutig pro Entität sein.
+MostDslJavaValidator.EntityIndexNameMustNotBeReservedDatabaseKeyword=Der Name des Indexes ist ein reserviertes Datenbank-Schlüsselwort.
 MostDslJavaValidator.EntityIndexNameShouldBeLonger=Der Name des Index sollte eine Länge von mindestens vier Zeichen haben.
 MostDslJavaValidator.EntityIndexNeedsEntity=Der Index muss einer Entität zugewiesen werden.
 MostDslJavaValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag haben, der ein Feld der Entität referenziert.
