--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -8,13 +8,20 @@ page.name.syntax_coloring = Syntax Einfärbung
 page.name.templates = Vorlagen
 page.name.mostdsl = Most DSL
 keyword.label.mostdsl = Most DSL
-command.description = Ausführliche Validierung starten
-command.validate.name = Validieren
-command.validate.tooltip = Ausführliche Validierung starten
+command.editorcopyqualifiedname.description=Den qualifizierten Namen für das ausgewählte Element kopieren
+command.editorcopyqualifiedname.name=Qualifizierten Namen kopieren
+command.editorcopyqualifiedname.tooltip=Qualifizierten Namen kopieren
+command.outlinecopyqualifiedname.description=Den qualifizierten Namen für das ausgewählte Element kopieren
+command.outlinecopyqualifiedname.name=Qualifizierten Namen kopieren
+command.outlinecopyqualifiedname.tooltip=Qualifizierten Namen kopieren
 command.quickoutline.description = Die Schnellstruktur öffnen.
 command.quickoutline.name = Schnellstruktur
 command.quickoutline.tooltip = Schnellstruktur öffnen
+command.validate.description = Ausführliche Validierung starten
+command.validate.name = Validieren
+command.validate.tooltip = Ausführliche Validierung starten
 page.name.refactoring = Refaktorisierung
+wizard.project.name=MostDsl-Projekt
 viewer.label = Most DSL Vergleich
 marker.check.fast = Most DSL Problem
 marker.check.normal = Most DSL Problem
