added new properties

--- a/production/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
@@ -17,6 +17,9 @@ navigatorContentName=*.mostcondiagram Diagramm-Inhalte
 update.diagram.name=Controller-Diagramm aktualisieren
 update.diagram.description=Aktualisierung des Controller-Diagramms durchführen
 
+unwelcome.activity.description=unwillkommene Contributions
+unwelcome.activity.name=unwillkommen
+
 
 # Property Sheet
 tab.appearance=Darstellung
