--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -27,6 +27,9 @@ navigatorContentName=*.mostdiagram Diagramm-Inhalte
 update.diagram.name=Anwendungs-Diagramm aktualisieren
 update.diagram.description=Aktualisierung des Anwendungs-Diagramms durchführen
 
+unwelcome.activity.description=unwillkommene Contributions
+unwelcome.activity.name=unwillkommen
+
 
 # Property Sheet
 tab.appearance=Darstellung
