--- a/production/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/plugin_de.properties
@@ -17,6 +17,9 @@ navigatorContentName=*.mostmoddiagram Diagramm-Inhalte
 update.diagram.name=Model-Diagramm aktualisieren
 update.diagram.description=Aktualisierung des Model-Diagramms durchführen
 
+unwelcome.activity.description=unwillkommene Contributions
+unwelcome.activity.name=unwillkommen
+
 
 # Property Sheet
 tab.appearance=Darstellung
