added validation rule and quick fix for preventing unique text/blob fields

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -140,6 +140,7 @@ MostDslJavaValidator.EntityFieldStringLengthMustNotLargeEnoughForHtmlColour=Die 
 MostDslJavaValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die String-Länge für Sprachcodes muss mindestens fünf Zeichen sein.
 MostDslJavaValidator.EntityFieldStringMustBeOneOfCountryLanguageHtmlColourPassword=Ein String kann nur eines sein von Land, Sprache, HTML-Farbe und Kennwort.
 MostDslJavaValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Sprachen und Farben müssen auch den nospace-Validator aktivieren.
+MostDslJavaValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslJavaValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslJavaValidator.EntityFieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
 MostDslJavaValidator.EntityFieldUploadNeedsValidFileExtensions=Das Attribut allowedExtensions muss eine kommaseparierte Liste der während dem Upload zu erlaubenden Dateitypen enthalten (Beispiel: gif, jpeg, jpg, png). Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
