--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
@@ -370,6 +370,7 @@ MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelationship=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredGeographicalField=Das unbenötigte geographical-Feld entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
+MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
 MostDslQuickfixProvider.RemoveViewActionFromTheController=View-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
@@ -432,6 +433,7 @@ MostDslQuickfixProvider.UnsetThePrimaryKeyFlag=Das primary key-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheSortableGroupFlag=Das sortable group-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheSortablePositionFlag=Das sortable position-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheStartDateFlag=Das Startdatum-Flag zurücksetzen
+MostDslQuickfixProvider.UnsetTheUniqueFlag=Das unique-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheVersionFlag=Das version-Flag zurücksetzen
 MostDslQuickfixProvider.UseAsColour=Als Farbe verwenden
 MostDslQuickfixProvider.UseAsCountry=Als Land verwenden
