added new validation rule for existence of view action related modvars

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -237,6 +237,7 @@ MostDslValidator.ModelContainerNameShouldBeLonger=Der Name des Model-Containers 
 MostDslValidator.ModelContainerNeedsApplication=Der Model-Container muss einer Anwendung zugewiesen werden.
 MostDslValidator.ModelContainerNeedsEntity=Der Model-Container muss mindestens eine Entität enthalten.
 MostDslValidator.ModelContainerNeedsName=Der Model-Container muss einen Namen haben.
+MostDslValidator.ModelContainerNeedsVarsForViewAction=Es ist empfohlen, zwei Integer-Variablen namens pageSize und showOnlyOwnEntries zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
 MostDslValidator.ModelContainersMultipleDefaultDataSources=Es darf nur einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
 MostDslValidator.ModelContainersMustBeUnique=Die Namen der Model-Container müssen eindeutig sein.
 MostDslValidator.ModelContainersNoDefaultDataSource=Es solle mindestens einen Model-Container geben, der auf die interne Datenquelle des Systems verweist.
