added orderByReverse property to many-to-many relationship

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -453,21 +453,23 @@ _UI_OneToOneRelationship_orphanRemoval_description = Ob Waisen automatisch entfe
 _UI_OneToOneRelationship_primaryKey_feature = Primärschlüssel
 _UI_OneToOneRelationship_primaryKey_description = Ob dies eine Primary Key Relation ist oder nicht.
 _UI_OneToManyRelationship_orderBy_feature = Sortieren nach
-_UI_OneToManyRelationship_orderBy_description = Optionaler Feldname zur Sortierung der verbundenen Entitäten.
-_UI_OneToManyRelationship_orphanRemoval_feature = Waisen entfernen
-_UI_OneToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
+_UI_OneToManyRelationship_orderBy_description = Optionaler Feldname zur Sortierung der verbundenen Ziel-Entitäten.
 _UI_OneToManyRelationship_indexBy_feature = Indiziert über
 _UI_OneToManyRelationship_indexBy_description = Optionaler Feldname, der für eine indizierte Assoziation benutzt wird.
+_UI_OneToManyRelationship_orphanRemoval_feature = Waisen entfernen
+_UI_OneToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_ManyToOneRelationship_primaryKey_feature = Primärschlüssel
 _UI_ManyToOneRelationship_primaryKey_description = Ob dies eine Primary Key Relation ist oder nicht.
 _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
 _UI_ManyToManyRelationship_refClass_description = Name der Referenz Record-Klasse um die Link-Tabelle zu verwalten (z. B. OrderProduct).
 _UI_ManyToManyRelationship_orderBy_feature = Sortieren nach
-_UI_ManyToManyRelationship_orderBy_description = Optionaler Feldname zur Sortierung der verbundenen Entitäten.
-_UI_ManyToManyRelationship_orphanRemoval_feature = Waisen entfernen
-_UI_ManyToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
+_UI_ManyToManyRelationship_orderBy_description = Optionaler Feldname zur Sortierung der verbundenen Ziel-Entitäten.
+_UI_ManyToManyRelationship_orderByReverse_feature = Sortieren nach Rückweg
+_UI_ManyToManyRelationship_orderByReverse_description = Optionaler Feldname zur Sortierung der verbundenen Quell-Entitäten.
 _UI_ManyToManyRelationship_indexBy_feature = Indiziert über
 _UI_ManyToManyRelationship_indexBy_description = Optionaler Feldname, der für eine indizierte Assoziation benutzt wird.
+_UI_ManyToManyRelationship_orphanRemoval_feature = Waisen entfernen
+_UI_ManyToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_InheritanceRelationship_strategy_feature = Strategie
 _UI_InheritanceRelationship_strategy_description = Die für diese Relation zu verwendende Vererbungsstrategie.
 _UI_InheritanceRelationship_discriminatorColumn_feature = Discriminator Column
