added new display pattern property replacing leading flag for entity fields

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -218,6 +218,8 @@ _UI_Views_controller_feature = Controller
 _UI_Views_controller_description = Liste der Controller, die diese View-Schicht behandeln.
 _UI_Entity_nameMultiple_feature = Name Mehrzahl
 _UI_Entity_nameMultiple_description = Pluralform des Entitätsnamens.
+_UI_Entity_displayPattern_feature = Anzeigemuster
+_UI_Entity_displayPattern_description = Muster zur Anzeige von Instanzen dieser Entität.
 _UI_Entity_fields_feature = Felder
 _UI_Entity_fields_description = Liste der Felder, die in dieser Entität enthalten sind.
 _UI_Entity_container_feature = Container
@@ -285,7 +287,7 @@ _UI_DerivedField_defaultValue_description = Für dieses Feld zu benutzender Stand
 _UI_DerivedField_mandatory_feature = Pflicht
 _UI_DerivedField_mandatory_description = Ob dieses Feld Pflicht ist oder nicht.
 _UI_DerivedField_leading_feature = Führend
-_UI_DerivedField_leading_description = Ob dies das führende Feld in dieser Entität ist. Das führende Feld wird zum Beispiel zur Standardsortierung und für Dropdownlisten benutzt.
+_UI_DerivedField_leading_description = Ob dies das führende Feld in dieser Entität ist. Obsolet und durch das Anzeigemuster der Entität ersetzt.
 _UI_DerivedField_primaryKey_feature = Primärschlüssel
 _UI_DerivedField_primaryKey_description = Ob dieses Feld Teil des Primärschlüssels ist oder nicht.
 _UI_DerivedField_readonly_feature = Nur lesen
