--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -153,8 +153,10 @@ MostDslValidator.EntityGeographicalMustNotContainReservedField=Daher dürfen Dein
 MostDslValidator.EntityGeographicalMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslValidator.EntityGeographicalMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntityGeographicalNeedsZipcodeField=Entitäten mit Geographical-Erweiterung sollten idealerweise ein String-Feld mit dem Namen zipcode und einer Länge von mindestens 10 enthalten.
-MostDslValidator.EntityHasMultipleLeadingFields=Jede Entität darf nur ein Feld als führend markiertes Feld enthalten.
-MostDslValidator.EntityHasNoLeadingField=Die Entität benötigt ein als führend markiertes Feld.
+MostDslValidator.EntityHasDisplayPatternButAlsoLeadingField=Bitte die Markierungen führender Felder entfernen, da diese Eigenschaft in Zukunft entfernt werden wird.
+MostDslValidator.EntityHasNoDisplayPatternAndMultipleLeadingFields=Die Verwendung eines Anzeigemusters in der Entität wird bevorzugt gegenüber dem Markieren führender Felder. Auch darf jede Entität nur ein Feld als führend markiertes Feld enthalten.
+MostDslValidator.EntityHasNoDisplayPatternAndNoLeadingFields=Die Entität benötigt ein Anzeigemuster.
+MostDslValidator.EntityHasNoDisplayPatternButALeadingField=Die Verwendung eines Anzeigemusters in der Entität wird bevorzugt gegenüber dem Markieren führender Felder.
 MostDslValidator.EntityHierarchyMustHaveSameDiscriminatorColumn=Alle Vererbungsbeziehungen innerhalb einer Klassenhierarchie müssen die gleiche Discriminator-Column haben.
 MostDslValidator.EntityHierarchyMustHaveSameInheritanceStrategy=Alle Vererbungsbeziehungen innerhalb einer Klassenhierarchie müssen die gleiche Vererbungsstrategie haben.
 MostDslValidator.EntityHierarchyMustHaveSameTrackingPolicy=Alle Entitäten innerhalb einer Klassenhierarchie müssen die gleiche Change Tracking Policy haben.
