--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
@@ -24,7 +24,6 @@ MostDslQuickfixProvider.AddADefaultInputFieldOrUseTheFirstOneIfExisting=Ein Stan
 MostDslQuickfixProvider.AddADefaultModelContainerOrUseTheFirstOneIfExisting=Einen Standard-Model-Container hinzufügen oder den ersten existierenden verwenden
 MostDslQuickfixProvider.AddADefaultPanelOrUseTheFirstOneIfExisting=Ein Standard-Panel hinzufügen oder das erste existierende verwenden
 MostDslQuickfixProvider.AddADefaultSearchPanelOrUseTheFirstOneIfExisting=Ein Standard-Suchpanel hinzufügen oder das erste existierende verwenden
-MostDslQuickfixProvider.AddADefaultStringFieldOrUseTheFirstFieldIfExisting=Ein Standard-Stringfeld hinzufügen oder das erste existierende verwenden
 MostDslQuickfixProvider.AddADefaultViewContainerOrUseTheFirstOneIfExisting=Einen Standard-View-Container hinzufügen oder den ersten existierenden verwenden
 MostDslQuickfixProvider.AddADeleteActionOrUseTheFirstOneIfExisting=Eine Delete-Aktion hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddADeleteActionToTheController=Eine Delete-Aktion zum Controller '{0}' hinzufügen
@@ -419,6 +418,7 @@ MostDslQuickfixProvider.UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html col
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
+MostDslQuickfixProvider.UnsetLeadingFieldFlags=Das leading-Flag für alle Felder zurücksetzen
 MostDslQuickfixProvider.UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheArchiveFlag=Das Archiv-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheEndDateFlag=Das Enddatum-Flag zurücksetzen
@@ -442,6 +442,7 @@ MostDslQuickfixProvider.UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider.UseAsSortableField=Als Sortierfeld verwenden
 MostDslQuickfixProvider.UseAsSortableGroup=Als Sortiergruppierung verwenden
 MostDslQuickfixProvider.UseAsStartDate=Als Startdatum verwenden
+MostDslQuickfixProvider.UseDisplayPatternInsteadOfLeadingFlags=Anzeigemuster an Stelle der leading-Flags verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
 MostDslQuickfixProvider.UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
@@ -449,7 +450,6 @@ MostDslQuickfixProvider.UseTheFirstContainerRemoveTheOthersAfterMovingAllContent
 MostDslQuickfixProvider.UseTheFirstDefaultItemUnsetTheDefaultFlagForAllOtherOnes=Den ersten Standardeintrag verwenden, das Standard-Flag für alle anderen entfernen
 MostDslQuickfixProvider.UseTheFirstEntityAsTheLeadingOne=Die erste Entität als führende verwenden
 MostDslQuickfixProvider.UseTheFirstEventRemoveTheOthers=Das erste Ereignis verwenden, die anderen entfernen
-MostDslQuickfixProvider.UseTheFirstFieldAsTheLeadingOne=Das erste Feld als führendes verwenden
 MostDslQuickfixProvider.UseTheFirstLeadingEntityAsTheLeadingOne=Die erste führende Entität als führende verwenden
 MostDslQuickfixProvider.UseTheFirstModelContainerAsDefaultDataSource=Den ersten Modell-Container als Standarddatenquelle verwenden
 MostDslQuickfixProvider.YourCompanyNameGoesHere=Dein Firmenname kommt hierhin
