introduced generator settings

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -60,6 +60,8 @@ Controller2CreationTool_title=Controller
 Controller2CreationTool_desc=Neuen Container für Pageflow-Controller erstellen
 View3CreationTool_title=View
 View3CreationTool_desc=Neuen Container für Präsentations-Elemente erstellen
+Settings4CreationTool_title=Einstellungen
+Settings4CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
 ModelDependency1CreationTool_title=Model-Abhängigkeit
 ModelDependency1CreationTool_desc=Model an Controller zuweisen
 ViewDependency2CreationTool_title=View-Abhängigkeit
