--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -49,5 +49,6 @@ metatype.name.Application_1000=Anwendung
 metatype.name.Models_2001=Model
 metatype.name.Controllers_2002=Controller
 metatype.name.Views_2003=View
+metatype.name.SettingsContainer_2004=Einstellungen
 metatype.name.ControllersModelContext_4001=Model Abhängigkeit
 metatype.name.ControllersProcessViews_4002=View Abhängigkeit
