--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -15,6 +15,7 @@ _UI_PropertyDescriptor_description = The {0} of the {1}
 
 _UI_NamedObject_type = Benanntes Objekt
 _UI_Application_type = Anwendung
+_UI_SettingsContainer_type = Einstellungen
 _UI_ReferredApplication_type = Referenzierte Anwendung
 _UI_Models_type = Models
 _UI_Controllers_type = Controller
@@ -161,7 +162,7 @@ _UI_Application_license_description = Name der verwendeten Lizenz.
 _UI_Application_prefix_feature = Präfix
 _UI_Application_prefix_description = Präfix für Datenbanktabellen dieser Anwendung.
 _UI_Application_targetCoreVersion_feature = Ziel Core Version
-_UI_Application_targetCoreVersion_description = Zikula-Version, für welche die Anwendung generiert werden soll.
+_UI_Application_targetCoreVersion_description = Zikula-Version, für welche die Anwendung generiert werden soll. Obsolet, bitte statt dessen die Generator Einstellungen verwenden.
 _UI_Application_interactiveInstallation_feature = Interaktive Installation
 _UI_Application_interactiveInstallation_description = Ob ein normaler oder ein interaktiver Installer verwendet wird.
 _UI_Application_modelPath_feature = Modell-Pfad
@@ -170,12 +171,66 @@ _UI_Application_models_feature = Models
 _UI_Application_models_description = Model-Schichten dieser Anwendung.
 _UI_Application_controllers_feature = Controller
 _UI_Application_controllers_description = Controller-Schichten dieser Anwendung.
+_UI_Application_generatorSettings_feature = Generator Einstellungen
+_UI_Application_generatorSettings_description = Technische Generator-Einstellungen.
 _UI_Application_referredApplications_feature = Referenzierte Anwendungen
 _UI_Application_referredApplications_description = Referenzen zu anderen Anwendungen für Hooks und Modul-API. Wird noch nicht verwendet.
 _UI_Application_views_feature = Views
 _UI_Application_views_description = View-Schichten dieser Anwendung.
 _UI_Application_applicationType_feature = Anwendungsart
 _UI_Application_applicationType_description = Art der modellierten Anwendung. Wird noch nicht verwendet.
+_UI_SettingsContainer_application_feature = Anwendung
+_UI_SettingsContainer_application_description = Referenz zur enthaltenden Anwendung.
+_UI_SettingsContainer_targetCoreVersion_feature = Ziel Core Version
+_UI_SettingsContainer_targetCoreVersion_description = Zikula-Version, für welche die Anwendung generiert werden soll.
+_UI_SettingsContainer_generateAccountApi_feature = Benutzerkonto Api generieren
+_UI_SettingsContainer_generateAccountApi_description = Ob eine Integration ins Benutzerkonto generiert werden soll oder nicht.
+_UI_SettingsContainer_generateSearchApi_feature = Suche Api generieren
+_UI_SettingsContainer_generateSearchApi_description = Ob eine Integration in die Seitensuche generiert werden soll oder nicht. Benötigt mindestens ein String- oder Textfeld in irgend einer Entität.
+_UI_SettingsContainer_generateMailzApi_feature = Mailz Api generieren
+_UI_SettingsContainer_generateMailzApi_description = Ob Support für Mailz generiert werden soll oder nicht.
+_UI_SettingsContainer_generateListBlock_feature = Listenblock generieren
+_UI_SettingsContainer_generateListBlock_description = Ob ein generischer Listenblock generiert werden soll oder nicht.
+_UI_SettingsContainer_generateModerationBlock_feature = Moderationsblock generieren
+_UI_SettingsContainer_generateModerationBlock_description = Ob ein Moderationsblock generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einem Workflow mit Freigabe.
+_UI_SettingsContainer_generateListContentType_feature = Listen Content Type generieren
+_UI_SettingsContainer_generateListContentType_description = Ob ein Content Type für Listenansichten generiert werden soll oder nicht.
+_UI_SettingsContainer_generateDetailContentType_feature = Detail Content Type generieren
+_UI_SettingsContainer_generateDetailContentType_description = Ob ein Content Type für einzelne Objekte generiert werden soll oder nicht. Benötigt einen User Controller mit einer Display-Aktion.
+_UI_SettingsContainer_generateNewsletterPlugin_feature = Newsletter Plugin generieren
+_UI_SettingsContainer_generateNewsletterPlugin_description = Ob ein Newsletter Plugin generiert werden soll oder nicht.
+_UI_SettingsContainer_generateModerationPanel_feature = Moderationspanel generieren
+_UI_SettingsContainer_generateModerationPanel_description = Ob ein Moderationspanel generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einem Workflow mit Freigabe.
+_UI_SettingsContainer_generatePendingContentSupport_feature = Pending Content Support generieren
+_UI_SettingsContainer_generatePendingContentSupport_description = Ob Unterstützung für Pending Content generiert werden soll oder nicht. Benötigt mindestens eine Entität mit einem Workflow mit Freigabe.
+_UI_SettingsContainer_generateExternalControllerAndFinder_feature = Externen Controller und Finder generieren
+_UI_SettingsContainer_generateExternalControllerAndFinder_description = Ob ein Controller für externe Aufrufe mit einer generischen Finder-Komponente generiert werden soll oder nicht.
+_UI_SettingsContainer_generateScribitePlugins_feature = Scribite Plugins generieren
+_UI_SettingsContainer_generateScribitePlugins_description = Ob Unterstützung für mehrere Scribite-Editoren generiert werden soll oder nicht. Benötigt externen Controller mit Finder-Komponente.
+_UI_SettingsContainer_generateTagSupport_feature = Tag Support generieren
+_UI_SettingsContainer_generateTagSupport_description = Ob der Tag Support generiert werden soll oder nicht. Benötigt User oder Admin Controller mit einer Display-Aktion.
+_UI_SettingsContainer_generateRssTemplates_feature = RSS-Templates generieren
+_UI_SettingsContainer_generateRssTemplates_description = Ob RSS View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateAtomTemplates_feature = Atom-Templates generieren
+_UI_SettingsContainer_generateAtomTemplates_description = Ob Atom View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateCsvTemplates_feature = CSV-Templates generieren
+_UI_SettingsContainer_generateCsvTemplates_description = Ob CSV View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateXmlTemplates_feature = XML-Templates generieren
+_UI_SettingsContainer_generateXmlTemplates_description = Ob XML Display und View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateJsonTemplates_feature = JSON-Templates generieren
+_UI_SettingsContainer_generateJsonTemplates_description = Ob JSON Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateKmlTemplates_feature = KML-Templates generieren
+_UI_SettingsContainer_generateKmlTemplates_description = Ob KML Templates generiert werden soll oder nicht. Benötigt das geographical-Flag bei den entsprechenden Entitäten.
+_UI_SettingsContainer_generateOnlyBaseClasses_feature = Nur Basisklassen generieren
+_UI_SettingsContainer_generateOnlyBaseClasses_description = Ob nur Basisklassen generiert werden sollen. Kann nützlich sein zur Durchführung einfacher Aktualisierungen ohne strukturelle Änderungen.
+_UI_SettingsContainer_skipFiles_feature = Dateien überspringen
+_UI_SettingsContainer_skipFiles_description = Komma-separierte Blacklist, wobei jeder Eintrag eine Datei repräsentiert, die nicht generiert werden soll.
+_UI_SettingsContainer_timestampAllGeneratedFiles_feature = Zeitstempel für alle generierten Dateien 
+_UI_SettingsContainer_timestampAllGeneratedFiles_description = Ob die generated by Nachricht einen Zeitstempel in allen Dateien oder nur in der Versionsklasse beinhalten soll.
+_UI_SettingsContainer_generatePoweredByBacklinksIntoFooterTemplates_feature = Powered By Backlinks in Footer-Templates generieren
+_UI_SettingsContainer_generatePoweredByBacklinksIntoFooterTemplates_description = Ob die generierten Footer-Templates Backlinks zur ModuleStudio-Homepage beinhalten sollen.
+_UI_SettingsContainer_generateTests_feature = Tests generieren
+_UI_SettingsContainer_generateTests_description = Ob Testfälle generiert werden sollen oder nicht.
 _UI_ReferredApplication_minVersion_feature = Minimale Version
 _UI_ReferredApplication_minVersion_description = Die minimale Version.
 _UI_ReferredApplication_maxVersion_feature = Maximale Version
@@ -701,9 +756,12 @@ _UI_LayoutOrderLengthType_INCH_literal = INCH
 _UI_LayoutOrderLengthType_POINTS_literal = POINTS
 _UI_LayoutOrderLengthType_PICAS_literal = PICAS
 
+_UI_GeneralPropertyCategory = Allgemein
+_UI_FeaturesPropertyCategory = Features
 _UI_PositioningPropertyCategory = Positionierung
 _UI_BehaviourPropertyCategory = Verhalten
 _UI_ContainedelementsPropertyCategory = Enthaltene Elemente
 _UI_BasicdataPropertyCategory = Basis-Daten
 _UI_FurtheroptionsPropertyCategory = Weitere Optionen
 _UI_SizePropertyCategory = Größe
+_UI_ContainerPropertyCategory = Container
