--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/messages_de.properties
@@ -21,7 +21,9 @@ MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adress
 MostDslValidator.ApplicationHasMultipleAdminControllers=Es darf nicht mehr als ein Admin-Controller existieren.
 MostDslValidator.ApplicationHasMultipleAjaxControllers=Es darf nicht mehr als ein Ajax-Controller existieren.
 MostDslValidator.ApplicationHasMultipleLeadingEntities=Genau eine Entität muss als führend deklariert werden (leading=true).
+MostDslValidator.ApplicationHasMultipleSettingsContainers=Die Anwendung darf nur einen Einstellungscontainer beinhalten.
 MostDslValidator.ApplicationHasMultipleUserControllers=Es darf nicht mehr als ein User-Controller existieren.
+MostDslValidator.ApplicationHasObsoleteCoreVersionSetting=Die Einstellung der Ziel-Coreversion auf Anwendungsebene ist obsolet. Bitte auf den Standardwert zurücksetzen und statt dessen die Eigenschaft des Setting Containers verwenden.
 MostDslValidator.ApplicationImportMinVersionIsInvalid=Die minimale Version muss dem Muster x.y.z entsprechen.
 MostDslValidator.ApplicationImportMinVersionMustNotBeGreaterThanMaxVersion=Die minimale Version darf nicht größer sein als die maximale Version.
 MostDslValidator.ApplicationImportMaxVersionIsInvalid=Die maximale Version muss dem Muster x.y.z entsprechen.
@@ -278,6 +280,8 @@ MostDslValidator.RootPanelNeedsCompositeContainer=Jedes Root-Panel muss mindeste
 MostDslValidator.RootPanelNeedsPresenter=Jedes Root-Panel muss einen Presenter haben.
 MostDslValidator.RootPanelNeedsSubmitActivator=Jedes Root Panel muss mindestens einen Submit Aktivator enthalten.
 MostDslValidator.RootPanelShouldContainCancelActivator=Jedes Root Panel sollte mindestens einen Cancel Aktivator enthalten.
+MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
+MostDslValidator.SettingsContainerScribiteWithoutFinder=Scribite Plugins benötigen externen Controller und Finder-Komponente.
 MostDslValidator.SubContainerNeedsField=Jeder Untercontainer muss mindestens ein Feld enthalten.
 MostDslValidator.SubContainerNeedsParentContainer=Der Kind-Container muss einem Eltern-Container zugewiesen werden.
 MostDslValidator.TabbedPaneNeedsChildContainers=Ein Tabbed Pane muss mindestens zwei Kind-Container enthalten.
