--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/messages_de.properties
@@ -292,8 +292,12 @@ MostDslQuickfixProvider.DecreaseMinimumValueToEqualMaximumValue=Minimalen Wert r
 MostDslQuickfixProvider.DecreaseMinimumVersionToEqualMaximumVersion=Minimale Version reduzieren und gleich der maximalen Version setzen
 MostDslQuickfixProvider.DecreaseScaleToBecomeLowerThanLength=Scale reduzieren und auf niedrigeren Wert als die Länge setzen
 MostDslQuickfixProvider.DisableCheckboxes=Checkboxen deaktivieren
+MostDslQuickfixProvider.DisableScribitePlugins=Scribite Plugins deaktivieren
+MostDslQuickfixProvider.DisableScribitePluginsDesc=Generierung von Plugins für mehrere Scribite-Editoren deaktivieren
 MostDslQuickfixProvider.DisableTheUseChecksFlag=Das useChecks-Flag deaktivieren
 MostDslQuickfixProvider.DropPrimaryKeyFlags=Primärschlüssel-Flags zurücksetzen
+MostDslQuickfixProvider.EnableExternalController=Externen Controller aktivieren
+MostDslQuickfixProvider.EnableExternalControllerDesc=Generierung des externen Controllers und der Finder-Komponente aktivieren
 MostDslQuickfixProvider.ExampleForAnotherModel=library/another.mostdsl
 MostDslQuickfixProvider.Extend=Erweitern
 MostDslQuickfixProvider.IncreaseFieldLength=Feldlänge erhöhen
@@ -328,6 +332,7 @@ MostDslQuickfixProvider.LowerMinValue=Min Wert herabsetzen
 MostDslQuickfixProvider.LowerMinVersion=Min Version herabsetzen
 MostDslQuickfixProvider.LowerScale=Scale herabsetzen
 MostDslQuickfixProvider.MakeRelationsUnidirectional=Relationen unidirektional machen
+MostDslQuickfixProvider.MigrateTargetCoreVersion=Ziel-Coreversion migrieren
 MostDslQuickfixProvider.NameOfImportedApplication=NameDerImportiertenAnwendung
 MostDslQuickfixProvider.RaiseLength=Länge hochsetzen
 MostDslQuickfixProvider.RaiseMaxValue=Max Wert hochsetzen
@@ -341,6 +346,8 @@ MostDslQuickfixProvider.RemoveAllLayoutOrdersBetweenTheToContainersExceptTheFirs
 MostDslQuickfixProvider.RemoveAllLayoutOrdersBetweenTheToContainersExceptTheLastOne=Alle Layout Orders zwischen den zwei Containern außer der letzten entfernen
 MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheFirstOne=Alle ausgehenden Vererbungsbeziehungen außer der ersten entfernen
 MostDslQuickfixProvider.RemoveAllOutgoingInheritanceRelationshipsExceptTheLastOne=Alle ausgehenden Vererbungsbeziehungen außer der letzten entfernen
+MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheFirstOne=Alle Einstellungscontainer außer dem ersten entfernen
+MostDslQuickfixProvider.RemoveAllSettingsContainersExceptTheLastOne=Alle Einstellungscontainer außer den letzten entfernen
 MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheFirstOne=Alle Übergänge zwischen den zwei Aktionen außer dem ersten entfernen
 MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheLastOne=Alle Übergänge zwischen den zwei Aktionen außer dem letzten entfernen
 MostDslQuickfixProvider.RemoveColourFlag=Das colour-Flag entfernen
