added missing locale fragment to locales feature; added missing English fragment descriptions

--- a/production/de.guite.modulestudio.gmf.model.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.gmf.model.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
-#Properties file for de.guite.modulestudio.gmf.mspers
+#Properties file for de.guite.modulestudio.gmf.model
 pluginName=ModuleStudio Model-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Model-Diagramm Locales Deutsch
