--- a/production/de.guite.modulestudio.gmf.main.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
-#Properties file for de.guite.modulestudio.gmf.msmain
+#Properties file for de.guite.modulestudio.gmf.main
 pluginName=ModuleStudio Anwendungs-Diagramm
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Anwendungs-Diagramm Locales Deutsch
