--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -662,6 +662,7 @@ _UI_Unknown_feature = Unspezifiziert
 _UI_ApplicationType_WEB_literal = WEB
 _UI_ApplicationType_NATIVE_literal = NATIVE
 _UI_ApplicationType_EMBEDDED_literal = EMBEDDED
+_UI_CoreVersion_ZKPRE14_literal = ZKPRE14
 _UI_CoreVersion_ZK136_literal = ZK136
 _UI_CoreVersion_ZK135_literal = ZK135
 _UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
